<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="GVL" Id="{f1a3d3fc-7aef-4f4b-aa0a-239c622402b9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
//=====================================
// mxAutomation
//=====================================	

	mxIn					AT%I* 	: ARRAY[0..63] OF DWORD;
	mxOut 					AT%Q* 	: ARRAY[0..63] OF DWORD;
	
	nAxisIndex						: INT := 1;  // Robot number one, may be any unique number between 1..5
	nOverrideGlobal					: INT;
	
	stCoordSys						: COORDSYS;
	stApprox						: APO;
	
	HMI_ActualCartPos				: E6POS;
	HMI_ActualAxisPosition			: E6AXIS;
	
	HMI_AutoStart					: BOOL;
	HMI_MessageReset				: BOOL;
	
	HMI_AutoEXT						: BOOL;
	HMI_DrivesNotReady				: BOOL;
	
	HMI_Error_ProConOS				: BOOL;
	HMI_Error_SINT					: BOOL;
	HMI_Error_General				: BOOL;
	HMI_Error_General_ID			: DINT;
	
	HMI_WriteLoadData				: BOOL;
	HMI_LOAD						: INT;
	HMI_TOOL						: INT;
	HMI_BASE						: INT;
	
	HMI_TouchUpStoreNow				: BOOL;
	HMI_TouchUpIndex				: INT;
	
	in_MOVE_ENABLE					: BOOL;
	in_CONF_MESS					: BOOL;
	in_DRIVES_ON					: BOOL;
	in_DRIVES_OFF					: BOOL;
	in_EXT_START					: BOOL;
	in_ENABLE_T1					: BOOL;
	in_ENABLE_T2					: BOOL;
	in_ENABLE_AUT					: BOOL;
	in_ENABLE_EXT					: BOOL;
	
	out_ALARM_STOP					: BOOL;
	out_USER_SAFE					: BOOL;
	
	
END_VAR 
VAR_GLOBAL RETAIN
	aPosArray	 					: POSITION_ARRAY;
	LinearArray 					: POSITION_ARRAY;
	kuka_fw 						: Robot_FW;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>